# nyc_data

./: .coderabbit.yaml  .dockerignore  .env  .env.example  .env.socrata  .flake8  .gitignore  .pre-commit-config.yaml  .sdd-progress.md  ACID_FIXES_IMPLEMENTATION_CODE.py  ACID_FIXES_QUICK_REFERENCE.txt  ADR-0001-question-driven-architecture.md  ADR-0002-deepened-question-resolver.md  AGENTS.md  ARCHITECTURE_REFACTORING_COMPLETE.md  BATCH_COVERAGE_RESULTS.md  CACHE_OPTIMIZATIONS_SUMMARY.md  CHANGELOG.md  CLAUDE.md  COMPREHENSIVE_DATASET_MAPPING.md  CONFIG_FIX_SUMMARY.md  CONSOLIDATED_GUIDE.md  CONTEXT.md  CONTRIBUTING.md  COVERAGE_EXPANSION_PLAN.md  DASH_AB_MONITORING.md  DASH_AB_TEST_CONFIG.md  DATASETS.md  DELIVERABLES_MANIFEST.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_GUIDE.md  DISMISSAL_WORKFLOW_DELIVERY.json  DOMAIN_VALIDATION_PHASE1.md  Dockerfile  Dockerfile.analyst  Dockerfile.api  Dockerfile.cloudbuild  Dockerfile.frontend  Dockerfile.lean  Dockerfile.mission  (+124 more)
.claude/: settings.json
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.remember/: MEMORY.md  design_review_findings_2026_06_12.md  nyc_dot_policy_definitive_2026_06_12.md  project_analyst_311_integration.md  project_analyst_role.md  remember.md  sidewalk_program_mission.md
.roo/: mcp.json
.streamlit/: config.toml
00_ARCHIVE_SUPERSEDED/: CONSOLIDATED_GUIDE.md  MOTHERDUCK_INTEGRATION_STATUS.md  NAVIGATION_USAGE_EXAMPLE.md  UNIFIED_KPI_REGISTRY_MASTER_PLAN.md  create_jupyter_notebooks.md  motherduck_dives_setup.md
00_CONFIG/: .dockerignore  .env.example  .env.socrata  .gitignore  .pre-commit-config.yaml
00_DOCUMENTATION/: .sdd-progress.md  DOCUMENTATION_MIGRATION_GUIDE.md  EXPANDED_KPI_CHART_REGISTRY.md  MASTER_DOCUMENTATION_INDEX.md  QUICKSTART.md  SOLO_DEVELOPER_GUIDE.md  START_HERE.md  TASK_COMPLETION_SUMMARY.md
00_UTILITIES/: check_datasets.py  check_v_kpi.py  generate_phase1_visualizations.py  populate_with_integration_manager.py
airflow/: Dockerfile.scheduler  config.py  docker-compose.yml  requirements.txt
airflow_app/: .dockerignore  Dockerfile.scheduler  Dockerfile.webserver  __init__.py  config.py  dag_registry.py  requirements.txt
analysis/: README.md  helpers.py  sidewalk_eda.ipynb  sidewalk_eda.md
app/: __init__.py  analytics.py  app.py  cloud_run.py  dash_app.py  dash_layouts.py  dash_layouts_analytics_integration.py  dash_layouts_gis.py  data_loader.py  data_manager.py  ingest_log.py  initialization.py  insight_engine.py  llm_proxy.py  main.py  minimal_test.py  mission_control.py  phase1_callbacks_example.py  sidecar_api.py  sim_core_analytics.py  simple_dash.py  test_dash.py  viz_engine.py
conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md  workflow.md
config/: .env  .env.example  analyst_profile.example.yaml  budget_codes.yaml  cloudbuild.yaml  datasets.yaml  doc_cache_config.yaml  full_sync_profile.yaml  kpi_registry.json  kpi_registry_full.json  kpi_registry_real.json  metric_registry.json  metric_registry_full.json  metric_registry_real.json  prometheus.yml  publish_profile.example.yaml  pyproject.toml  pyrightconfig.json  requirements-dev.txt  requirements.txt  research_questions.json  skills-lock.json  sla_definitions.yaml
dash_app/: __init__.py  app.py
data/: SENTIMENT_EXAMPLE_OUTPUT.json  analytics_config.json  dataset_config.json  equity_policy.json  hotspot_classifications.json  job_description_analysis.json  manual_test.duckdb  refresh_log.txt  scheduler_config.json  sla_config.json
data-analytics-skills/: .gitignore  CLAUDE.md  QUICKSTART.md  README.md  STRUCTURE.md  validate_skills.py
desktop/: .gitignore  Dockerfile  README.md  main.js  package-lock.json  package.json  preload.js
docker/: setup-entrypoint.sh
docs/: 5_HIDDEN_METHODS_GUIDE.md  5_METHODS_IMPLEMENTATION_INDEX.md  ACID_FIXES_IMPLEMENTATION_SUMMARY.md  ACID_RELIABILITY_IMPLEMENTATION_PLAN.md  AGENCY_RUNBOOK.md  ANALYSIS_MODULES.md  ANALYST_GUIDE.md  ANALYST_WORKFLOW.md  API.md  API_REFERENCE.md  APPEAL_TRACKING_IMPLEMENTATION.md  ARCHITECTURE.md  ARCHITECTURE_REFERENCE.md  ARCHITECTURE_SUMMARY.md  AWS_DEPLOYMENT_GUIDE.md  CACHING_STRATEGY.md  CHART_DESIGN_WORKFLOW.md  CHART_REGISTRY.md  CI.md  CLI_REFERENCE.md  COMMAND_REFERENCE.md  COMPLETENESS.md  COMPLETE_ERD_SUMMARY.md  COMPLETE_TECH_STACK_ASSESSMENT.md  COMPREHENSIVE_DATASET_MAPPING.md  CONSTRUCTOR_CONTEXT.md  COVERAGE_PROGRESS.md  DASH_APP_REFERENCE.md  DASH_ARCHITECTURE.md  DASH_QUICK_REFERENCE.md  DASH_UX_AUDIT.md  DATASETS.md  DATASET_DISCOVERY_GUIDE.md  DATASET_REGISTRY.yaml  DATA_CATALOG_COMPLETE.md  DATA_CATALOG_ENTRY_NYC_DOT_PIPELINE.md  DATA_CONSOLIDATION_PLAN.md  DATA_DICTIONARY.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  (+145 more)
examples/: chatbot_example.py  demo_run.sh  integration_example.py  integration_example.sh  soql_query_demo.py  sql_query_engine_example.py
frontend/: README.md  SETUP.md  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.json
installer/: INSTALL.txt  nyc_dot_toolkit.iss
jupyter_book/: README.md  _config.yml  _toc.yml  intro.md
legacy/: README.md  nicegui_mission_control.py
nyc_careers_pipeline/: README.md
nyc_data/: .worktreeinclude  ARCHITECTURAL_ASSESSMENT.md  Makefile  docker-compose.test.yml  requirements.txt
nyc_data-1/: Dockerfile  socrata_toolkit.config.json
outputs/: board.json
pipeline/: .gitignore  README.md  compact_local.py  generate_staging_schema.py  governance.py  ingest_ct66_daily.py  motherduck_bridge.py  publish_serving.py  regenerate_from_registry.py  run_local.py  run_pipeline.py  socrata_loader.py  sql_executor.py
plans/: 001-query-limits.md  001-security-env-credentials.md  002-security-motherduck-token.md  002-token-security.md  003-perf-callback-memoization.md  003-shutdown-cleanup.md  004-analysis-init-refactor.md  004-healthcheck-endpoint.md  005-deps-cleanup.md  005-http-status-fix.md  006-skill-md-doc-fixes.md  006-thread-safety.md  007-cache-invalidation.md  007-skill-demo-modes.md  008-code-duplication.md  008-dash-startup-crashes.md  009-filter-system-integration.md  010-kpi-cards-activation.md  (+6 more)
(+1861 files in other folders)
