[tool.poetry]
name = "socrata_toolkit"
version = "0.3.0"
description = "NYC DOT Sidewalk Inspection & Management Toolkit"
authors = ["Richard Yudkiss ryudkiss@gmail.com"]
readme = "README.md"
license = "MIT"
packages = [
    { include = "socrata_toolkit", from = "src" },
    { include = "app" },
]

[tool.poetry.dependencies]
python = ">=3.9,<3.15"
python-dotenv = ">=1.0.0"

requests = ">=2.28"
pandas = ">=2.0,<3.0"
pyyaml = ">=6.0"
click = ">=8.0"
numpy = ">=1.24,<3.0"
duckdb = ">=0.9.0"
tenacity = ">=8.0"
apscheduler = ">=3.10"
duckdb-engine = ">=0.9.0"
pyinstaller = {version = ">=6.0", optional = true}
pydantic = ">=2.0"
openpyxl = ">=3.0"
sodapy = {version = ">=2.2.0", optional = true}
pyarrow = {version = ">=14.0", optional = true}

# Optional heavy dependencies
langchain = {version = ">=0.1.0", optional = true}
langchain-community = {version = ">=0.0.10", optional = true}
langchain-openai = {version = ">=0.1.0", optional = true}
ollama = {version = ">=0.1.0", optional = true}
openai = {version = ">=1.0.0", optional = true}
huggingface-hub = {version = ">=0.16.0", optional = true}
streamlit = {version = ">=1.10", optional = true}
spacy = {version = ">=3.5", optional = true}
shapely = {version = "^2.0", optional = true}
geopandas = {version = ">=0.14", optional = true}
matplotlib = {version = ">=3.5", optional = true}
psycopg = {version = ">=3.1", optional = true}
plotly = {version = ">=5.0", optional = true}
weasyprint = {version = ">=60.0", optional = true}
python-pptx = {version = ">=0.6.23", optional = true}

[tool.poetry.extras]
# Default install: pip install -e .  (core analyst + Dash workflow)
xlsx = ["openpyxl"]
postgres = ["psycopg"]
# Optional — install only when needed
nlp = ["spacy"]
llm = ["langchain", "langchain-community", "langchain-openai", "ollama", "openai", "huggingface-hub"]
viz = ["matplotlib", "plotly"]
geo = ["shapely", "geopandas"]
reports = ["plotly", "weasyprint"]
ui = ["streamlit"]
mission = ["streamlit", "sodapy", "geopandas", "shapely", "plotly", "pyarrow"]
pptx = ["python-pptx"]
exe = ["pyinstaller"]
all = ["openpyxl", "spacy", "shapely", "geopandas", "matplotlib", "plotly", "weasyprint", "streamlit", "psycopg", "python-pptx", "langchain", "langchain-community", "langchain-openai", "ollama", "openai", "huggingface-hub", "pyinstaller"]

[tool.poetry.scripts]
socrata = "socrata_toolkit.core.cli:main"
mission = "main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=7.0)",
    "black (>=23.0)",
    "ruff (>=0.1.0)",
    "isort (>=5.0)",
    "coverage (>=7.0)",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "legacy: archived Dash UI import tests (slow, optional in CI)",
    "slow: long-running tests",
]

[tool.coverage.run]
source = ["app", "src/socrata_toolkit/analyst", "src/socrata_toolkit/core"]
omit = ["*/tests/*", "legacy_archive/*"]

[tool.coverage.report]
fail_under = 40
show_missing = true

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
# Select rules to enable: Pyflakes (F), pycodestyle (E, W), isort (I), pyupgrade (UP), flake8-bugbear (B)
select = ["E", "F", "W", "I", "UP", "B"]
# Ignore rules that are impractical to enforce across the full codebase or are style preferences
ignore = [
    "E501",   # line too long (handled by formatter)
    "E402",   # module import not at top (used intentionally for optional/deferred imports)
    "F811",   # redefinition of unused name (used in compatibility shims and type stubs)
    "F841",   # local variable assigned but never used
    "F403",   # 'from module import *' (used in public __init__ re-exports)
    "F402",   # import * from future
    "B904",   # raise without `from err` (style preference)
    "B905",   # zip() without explicit strict= (style preference)
    "B007",   # loop variable unused (renamed to _ not always possible)
    "B023",   # function definition in loop body (style preference)
    "B006",   # mutable default argument (documented intentional uses)
    "E722",   # bare except (used for broad compatibility catches)
    "E731",   # lambda assignment (used for brief single-use helpers)
    "W291",   # trailing whitespace (auto-fixed below)
    "W293",   # blank line with whitespace (auto-fixed below)
    "W292",   # no newline at end of file (auto-fixed below)
]
# Allow ruff --fix to auto-correct all fixable rule categories
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
# governance/__init__.py has intentionally ordered imports (audit must come last to win over core.*)
"src/socrata_toolkit/governance/__init__.py" = ["I001"]
